@@ -72,14 +72,17 @@ Note that `not present` is a very bad thing to put in a preferred content
 expression. It'll make it prefer to get content that's not present, and
 drop content that is present! Don't go there..
 
-### difference: "inmydir"
+### difference: "inpreferreddir"
 
-There's a special "inmydir" keyword you can use in a preferred content
-expression of a special remote. This means that the content is preferred
-if it's in a directory (located anywhere in the tree) with a special name.
+There's a special "inpreferreddir" keyword you can use in a
+preferred content expression of a special remote. This means that the
+content is preferred if it's in a directory (located anywhere in the tree)
+with a special name.
 
 The name of the directory can be configured using 
-`git annex initremote $remote mydir=$dirname`
+`git annex initremote $remote preferreddir=$dirname`
+
+(If no directory name is configured, it uses "public" by default.)
 
 ## standard expressions
 
@@ -178,10 +181,14 @@ reached an archive repository.
 ### public
 
 This is used for publishing information to a repository that can be
-publically accessed. Only files inside `public` directories will be
-stored in a public repository.
+publically accessed. Only files in a directory with a particular name
+will be published. (The directory can be located anywhere in the
+repository.)
 
-`include=*/public/* or include=public/*`
+The name of the directory can be configured using
+`git annex initremote $remote preferreddir=$dirname`
+
+`inpreferreddir`
 
 ### unwanted
 
