@@ -1,21 +1,20 @@
 <div .span9 .hero-unit>
   <h2>
-    Adding an Internet Archive repository
+    Adding an Internet Archive item
   <p>
     <a href="http://archive.org/">The Internet Archive</a> allows anyone #
-    to publically archive their information, for free.
-  <p>
-    All you need to do is #
+    to publically archive their information, for free. All you need to #
+    get started is to #
     <a href="http://archive.org/account/login.createaccount.php">
       Create an account
   <p>
-    To protect your pirvacy, only files located in a public folder #
-    will be sent to the Internet Archive by default.
+    The Internet Archive stores "items". An item can be a single file, or #
+    a related group of files. You can make as many different items as you #
+    like.
   <p>
-    Note that you cannot remove information once it has been sent to the #
-    Internet Archive. So before you continue, please make sure you want #
-    to make your files public, and that your files conform to the #
-    <a href="http://archive.org/about/terms.php">Terms of Use</a>.
+    By default, only files that you place in a special directory #
+    will be uploaded to your Internet Archive item. Any other files #
+    in your repository will remain private.
   <p>
     <form method="post" .form-horizontal enctype=#{enctype}>
       <fieldset>
@@ -23,11 +22,11 @@
         ^{webAppFormAuthToken}
         <div .form-actions>
           <button .btn .btn-primary type=submit onclick="$('#workingmodal').modal('show');">
-            Add Internet Archive repository
+            Add Internet Archive item
 <div .modal .fade #workingmodal>
   <div .modal-header>
     <h3>
-      Making repository ...
+      Making item ...
   <div .modal-body>
     <p>
-      Setting up your Internet Archive repository. This could take a minute.
+      Setting up your Internet Archive item. This could take a minute.
